# PureWare

./: .gitignore  CMakeLists..txt  CMakeLists.txt  CMakeSettings.json  PureWare.cpp  PureWare.hpp  PureWare.sln  PureWare.vcxproj  PureWare.vcxproj.filters  README.md  more.hpp  packages.config  vcpkg-configuration.json  vcpkg.json
PureWare/x64/Debug/: PureWare.exe.recipe  PureWare.vcxproj.FileListAbsolute.txt  vc143.idb
PureWare/x64/Debug/PureWare.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PureWare.lastbuildstate  PureWare.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
logs/: my_log.txt
